# Biochemical-Data-Pipeline-Database-Management-System--Python--SQL-Pandas-Pytest

biochemistry-main/: README.md  pyproject.toml
biochemistry-main/src/biochemistry/: __init__.py  constants.py  manager.py
biochemistry-main/tests/: README.md  grading.md  test_biochemistry.py
biochemistry-main/tests/data/: test_data.tsv
