[project]
name = "biochemistry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Faiza Khurshid", email = "90152451+faiza-khurshid@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
